  and Nicolás Ojeda Bär)

- #11386: Simplifications and fixes to multicore systhreads implementation.
  (Guillaume Munch-Maccagnoni, review by Anil Madhavapeddy and KC
   Sivaramakrishnan)

- #12408: `Domain.spawn` no longer leaks its functional argument for
  the whole duration of the children domain lifetime.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer)

### Code generation and optimizations:

- #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
  This reduces stack usage.  It's only C stacks that require 16-alignment.
  (Xavier Leroy, review by Gabriel Scherer and Stephen Dolan)

- #12311: on POWER, 32-bit FP numbers stored in memory (e.g. in bigarrays)
  were not correctly rounded sometimes.
  (Xavier Leroy, review by Anil Madhavapeddy and Tim McGilchrist)

### Standard library:

* #10775: Half-precision floating-point elements in Bigarray.
  (Anton Yabchinskiy, review by Xavier Leroy and Nicolás Ojeda Bär)

- #12217: Add `Array.shuffle`.
  (Daniel Bünzli, review by Nicolás Ojeda Bär, David Allsopp and Alain Frisch)

- #12212: Add cache-aligned constructor for atomics. The patch ensures that
  all allocations (of the right size) in the shared heap are aligned.
  (Bartosz Modelski with Gabriel Scherer, Guillaume Munch-Maccagnoni,
   Xavier Leroy, review by Alain Frisch, Anil Madhavapeddy, Gabriel Scherer,
   Guillaume Munch-Maccagnoni, KC Sivaramakrishnan, Stefan Muenzel,
   Xavier Leroy)

### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12340: testsuite: collect known issues with current -short-paths
  implementation for existential types
  (Florian Angeletti, Samuel Hym, review by Florian Angeletti and Thomas Refis)

- #12147: ocamllex: Allow carriage returns at the end of line directives.
  (SeungCheol Jung, review by Nicolás Ojeda Bär)
