@@ -19,7 +19,22 @@
 module Raw = struct
   (* Low-level primitives provided by the runtime *)
   type t = private int
-  external spawn : (unit -> unit) -> Mutex.t -> t
+
+  (* The layouts of [state] and [term_sync] are hard-coded in
+     [runtime/domain.c] *)
+
+  type 'a state =
+    | Running
+    | Finished of ('a, exn) result [@warning "-unused-constructor"]
+
+  type 'a term_sync = {
+    (* protected by [mut] *)
+    mutable state : 'a state [@warning "-unused-field"] ;
+    mut : Mutex.t ;
+    cond : Condition.t ;
+  }
+
+  external spawn : (unit -> 'a) -> 'a term_sync -> t
     = "caml_domain_spawn"
   external self : unit -> t
     = "caml_ml_domain_id"
@@ -33,15 +48,9 @@ let cpu_relax () = Raw.cpu_relax ()
 
 type id = Raw.t
 
-type 'a state =
-| Running
-| Finished of ('a, exn) result
-
 type 'a t = {
   domain : Raw.t;
-  term_mutex: Mutex.t;
-  term_condition: Condition.t;
-  term_state: 'a state ref (* protected by [term_mutex] *)
+  term_sync : 'a Raw.term_sync;
 }
 
 module DLS = struct
@@ -188,72 +197,49 @@ let spawn f =
   do_before_first_spawn ();
   let pk = DLS.get_initial_keys () in
 
-  (* The [term_mutex] and [term_condition] are used to
-     synchronize with the joining domains *)
-  let term_mutex = Mutex.create () in
-  let term_condition = Condition.create () in
-  let term_state = ref Running in
+  (* [term_sync] is used to synchronize with the joining domains *)
+  let term_sync =
+    Raw.{ state = Running ;
+          mut = Mutex.create () ;
+          cond = Condition.create () }
+  in
 
   let body () =
-    let result =
-      match
-        DLS.create_dls ();
-        DLS.set_initial_keys pk;
-        let res = f () in
+    match
+      DLS.create_dls ();
+      DLS.set_initial_keys pk;
+      let res = f () in
+      res
+    with
+    (* Run the [at_exit] callbacks when the domain computation either
+       terminates normally or exceptionally. *)
+    | res ->
+        (* If the domain computation terminated normally, but the
+           [at_exit] callbacks raised an exception, then return the
+           exception. *)
+        do_at_exit ();
         res
-      with
-      | x -> Ok x
-      | exception ex -> Error ex
-    in
-
-    let result' =
-      (* Run the [at_exit] callbacks when the domain computation either
-         terminates normally or exceptionally. *)
-      match do_at_exit () with
-      | () -> result
-      | exception ex ->
-          begin match result with
-          | Ok _ ->
-              (* If the domain computation terminated normally, but the
-                 [at_exit] callbacks raised an exception, then return the
-                 exception. *)
-              Error ex
-          | Error _ ->
-              (* If both the domain computation and the [at_exit] callbacks
-                 raised exceptions, then ignore the exception from the
-                 [at_exit] callbacks and return the original exception. *)
-              result
-          end
-    in
-
-    (* Synchronize with joining domains *)
-    Mutex.lock term_mutex;
-    match !term_state with
-    | Running ->
-        term_state := Finished result';
-        Condition.broadcast term_condition;
-    | Finished _ ->
-        failwith "internal error: Am I already finished?"
-    (* [term_mutex] is unlocked in the runtime after the cleanup functions on
-       the C side are finished. *)
+    | exception exn ->
+        (* If both the domain computation and the [at_exit] callbacks
+           raise exceptions, then ignore the exception from the
+           [at_exit] callbacks and return the original exception. *)
+        (try do_at_exit () with _ -> ());
+        raise exn
   in
-  { domain = Raw.spawn body term_mutex;
-    term_mutex;
-    term_condition;
-    term_state }
+  let domain = Raw.spawn body term_sync in
+  { domain ; term_sync }
 
-let join { term_mutex; term_condition; term_state; _ } =
-  Mutex.lock term_mutex;
+let join { term_sync ; _ } =
+  let open Raw in
   let rec loop () =
-    match !term_state with
+    match term_sync.state with
     | Running ->
-        Condition.wait term_condition term_mutex;
+        Condition.wait term_sync.cond term_sync.mut;
         loop ()
     | Finished res ->
-        Mutex.unlock term_mutex;
         res
   in
-  match loop () with
+  match Mutex.protect term_sync.mut loop with
   | Ok x -> x
   | Error ex -> raise ex
 
